--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -290,6 +290,132 @@ faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
 faithful_scatter
 ```
 
+
+### The Canadian languages data set
+
+We will return to the `canlang` data set, which contains counts of languages from the 2016 Canadian census.
+
+**Question:** Is there a relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home? And is there a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)?
+
+```{r 03-canlang-example, message = F, warning = F}
+can_lang <- read_csv("data/can_lang.csv")
+can_lang
+```
+
+We will begin with a scatter plot of the `mother_tongue` and `most_at_home` columns from our data frame.
+
+```{r mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point()
+``` 
+To improve the interpretability of the data visualization that we created we should replace the default axis names with a more
+informative labels. 
+
+```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point() +
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)")
+```
+
+Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-labs). The reason for the bunched data is because many more people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale:
+
+```{r mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point() +
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+```
+
+From this visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these  points would fit the pattern we observe quite well, we say that it's linear.
+
+```{r changing_the_units, include = FALSE}
+english_mother_tongue <- can_lang %>%
+  filter(language == "English") %>%
+  pull(mother_tongue)
+census_popn <- 35151728
+```
+
+What does it mean that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` 
+people reported that their mother tongue was English in the 2016 Canadian census? To really understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian census profile, we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The count of 
+the number of people who report that English is their mother tongue is much more 
+meaningful when we report it in this context. We can even go a step further and 
+transform this count to a relative frequency, or proportion, so that we can 
+represent this as a single meaningful number in our data visualizations. We can 
+do this by dividing the number of people reporting a given language as their 
+mother tongue by the number of people who live in Canada. For example, the 
+proportion of people who reported that their mother tongue was English in the 
+2016 Canadian census was 
+`r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
+
+Below we use mutate to calculate the proportion of people reporting a given language as their mother tongue and primary language at home for all the languages in the `can_lang` data set:
+
+```{r}
+can_lang <- can_lang %>% mutate(mother_tongue = mother_tongue / 35151728, most_at_home = most_at_home / 35151728)
+can_lang
+```
+
+Finally, let's visualize the data now that we have represented it as proportions (and change our axis labels to reflect this change in units!):
+
+```{r mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point() +
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+```
+
+From the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale-props), we can now clearly see that not just a lot, but that the majority of Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
+
+### Coloring points by group
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
+scatter plot we have already created by group/category. For example,
+given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+scatter plot to represent each language's higher-level language category.
+
+We will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
+
+```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
+  geom_point() +
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+```
+
+What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
+
+For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+
+Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
+
+The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
+and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this course.  
+
+
+Below, we have added a few more layers to make the data visualization even more effective. Specifically we used have improved the visualizations accessibility by choosing 
+colours that are easier to distinguish and also mapped category to shape, we handled the problem of overlapping data points by making them slightly transparent, and we changed the background from grey to white to improve the 
+contrast.
+
+```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
+ggplot(can_lang, aes(
+  x = most_at_home,
+  y = mother_tongue,
+  colour = category,
+  shape = category
+)) + # map categories to different shapes
+  geom_point(alpha = 0.6) + # set the transparency of the points
+  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black")) + # choose point colours
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma) 
+```
+
 ### The Michelson speed of light data set
 The `morley` data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
 for five experiments, each with 20 consecutive runs. This data set is available in base R under the name `morley` so it does not need to be loaded.
@@ -370,6 +496,7 @@ using the `labs` function, and increase the font size to make it readable using 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
 for just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
+
 ```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
 morley_rel <- mutate(morley, relative_accuracy = 100 * ((299000 + Speed) - 299792.458) / (299792.458))
 morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) +
