--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -17,7 +17,7 @@ charts, line graphs, and histograms) for data using R.
     - histogram plots
 - Given a data set and a question, select from the above plot types and use R to create a visualization that best answers the question
 - Given a visualization and a question, evaluate the effectiveness of the visualization and suggest improvements to better answer the question
-- Referring to the visualization, communicate the conclusions in nontechnical terms
+- Referring to the visualization, communicate the conclusions in non-technical terms
 - Identify rules of thumb for creating effective visualizations 
 - Define the three key aspects of ggplot objects:
     - aesthetic mappings
@@ -37,19 +37,16 @@ charts, line graphs, and histograms) for data using R.
 ## Choosing the visualization
 #### *Ask a question, and answer it*
 
-The purpose of a visualization is to answer a question about a data set of interest. So naturally, the first thing to do **before** creating 
-a visualization is to formulate the question about the data that you are trying to answer. 
+The purpose of a visualization is to answer a question about a data set of interest. So naturally, the first thing to do **before** creating a visualization is to formulate the question about the data you are trying to answer. 
 A good visualization will clearly answer your question without distraction; a *great* visualization will suggest even what the question
 was itself without additional explanation. Imagine your visualization as part of a poster presentation for a project; even if you aren't standing
-at the poster explaining things, an effective visualization will be able to convey your message to the audience.
+at the poster explaining things, an effective visualization will convey your message to the audience.
 
-Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter of this book. With the visualizations
+Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter. With the visualizations
 we will cover in this chapter, we will be able to answer *only descriptive and exploratory* questions. Be careful not to try to answer any *predictive, inferential, causal or mechanistic*
 questions, as we have not learned the tools necessary to do that properly just yet.  
 
-As with most coding tasks, it is totally fine (and quite common) to make mistakes and iterate a few times before you find 
-the right visualization for your data and question. There are [many different kinds of plotting graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html) available 
-to use. For the kinds we will introduce in this course, the general rules of thumb are:
+As with most coding tasks, it is totally fine (and quite common) to make mistakes and iterate a few times before you find the right visualization for your data and question. There are [many different kinds of plotting graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html) available to use. For the kinds we will introduce in this book, the general rules of thumb are:
 
 - **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) 
@@ -59,8 +56,7 @@ to use. For the kinds we will introduce in this course, the general rules of thu
 All types of visualization have their (mis)uses, but three kinds are usually hard to understand or are easily replaced with an oft-better alternative.
 In particular, you should avoid **pie charts**; it is generally better to use bars, as it is easier to compare bar heights than pie slice sizes.
 You should also not use **3-D visualizations**, as they are typically hard to understand when converted to a static 2-D image format. Finally,
-do not use tables to make numerical comparisons; humans are much better at quickly processing visual information than text and math. Bar plots are 
-again typically a better alternative.
+do not use tables to make numerical comparisons; humans are much better at quickly processing visual information than text and math. Bar plots are again typically a better alternative.
 
 
 ## Refining the visualization
@@ -77,11 +73,8 @@ making it easier for them to understand and remember your message quickly.
 - Make sure the visualization answers the question you have asked most simply and plainly as possible.
 - Use legends and labels so that your visualization is understandable without reading the surrounding text.
 - Ensure the text, symbols, lines, etc., on your visualization are big enough to be easily read.
-- Ensure the data are clearly visible; don’t hide the shape/distribution of the data behind other objects (e.g. a bar).
-- Make sure to use colour schemes that are understandable by those with colourblindness (a surprisingly large fraction of the 
-  overall population). For example, [colorbrewer.org](https://colorbrewer2.org)
-  and the `RColorBrewer` R package provide the ability to pick such colour schemes, and you can check your visualizations after
-  you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
+- Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g. a bar).
+- Make sure to use colour schemes that are understandable by those with colourblindness (a surprisingly large fraction of the overall population). For example, [colorbrewer.org](https://colorbrewer2.org) and the `RColorBrewer` R package provide the ability to pick such colour schemes, and you can check your visualizations after you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
 
 **Minimize noise**
@@ -97,6 +90,9 @@ making it easier for them to understand and remember your message quickly.
 
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
 and then how to create the visualization in R using `ggplot2`. To use the `ggplot2` package, we need to load the `tidyverse` metapackage.
+
+
+
 
 ```{r 03-tidyverse,, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -134,6 +130,10 @@ a few basic aspects of a plot that we need to specify:
     - to create a geometric object, we use a `geom_*` function (see the [ggplot reference](https://ggplot2.tidyverse.org/reference/) for a list of geometric objects)
     - here, we use the `geom_point` function to visualize our data as a scatterplot
 
+ We can see in Figure \@ref(fig:03-ggplot-function-scatter) how each of these aspects maps to our code for creating a basic scatter plot for our `co2_df` data. 
+```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatterplot with the ggplot function", message =F}
+knitr::include_graphics("img/ggplot_function_scatter.jpeg")
+```
 We could pass many other possible arguments to the aesthetic mapping and geometric object to change how the plot looks. For 
 the purposes of quickly testing things out to see what they look like, though, we can just go with the default settings:
 
@@ -143,7 +143,7 @@ co2_scatter <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
 co2_scatter
 ```
 
-Certainly, the visualization shows a clear upward trend in the atmospheric concentration of CO2 over time.
+Certainly, the visualization in Figure \@ref(fig:03-data-co2-scatter) shows a clear upward trend in the atmospheric concentration of CO2 over time.
 This plot answers the first part of our question in the affirmative, but that appears to be the only conclusion one can make from the scatter visualization. 
 However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` function. Line plots require
 that their `x` coordinate orders the data, and connect the sequence of `x` and `y` coordinates with line segments. Let's again try this with just 
@@ -214,7 +214,7 @@ islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
 islands_bar
 ```
 
-Alright, not bad! This plot is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major issues are that the smaller landmasses' sizes are hard to distinguish, and the names of the landmasses are obscuring each other as they have been squished into too little space. But remember that the question we asked was only about the largest landmasses; let's make the plot a little bit clearer by keeping only the largest 12 landmasses. We do this using the `top_n` function.
+Alright, not bad! The plot in Figure \@ref(fig:03-data-islands-bar) is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major issues are that the smaller landmasses' sizes are hard to distinguish, and the names of the landmasses are obscuring each other as they have been squished into too little space. But remember that the question we asked was only about the largest landmasses; let's make the plot a little bit clearer by keeping only the largest 12 landmasses. We do this using the `top_n` function.
 Then to help us make sure the labels have enough space, we'll use horizontal bars instead of vertical ones. We do this using the 
 `coord_flip` function, which swaps the `x` and `y` coordinate axes:
 
@@ -226,7 +226,7 @@ islands_bar <- ggplot(islands_top12, aes(x = landmass, y = size)) +
 islands_bar
 ```
 
-This plot is definitely clearer now, and allows us to answer our question ("are the top 7 largest landmasses continents?") in
+The plot in Figure \@ref(fig:03-data-islands-bar-2) is definitely clearer now, and allows us to answer our question ("are the top 7 largest landmasses continents?") in
 the affirmative. But the question could be made clearer from the plot by organizing the bars not by alphabetical order
 but by size, and to colour them based on whether they are a continent. To do this, we 
 use `mutate` to add a column to the data regarding whether or not the landmass is a continent:
@@ -251,7 +251,7 @@ islands_bar <- ggplot(islands_ct, aes(x = reorder(landmass, size), y = size, fil
 islands_bar
 ```
 
-This is now a very effective visualization for answering our original questions. Landmasses are organized by their size,
+The plot in Figure \@ref(fig:03-data-islands-bar-4) is now a very effective visualization for answering our original questions. Landmasses are organized by their size,
 and continents are coloured differently than other landmasses, making it quite clear that continents are the largest seven landmasses.
 
 
@@ -278,7 +278,7 @@ faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
 faithful_scatter
 ```
 
-We can see that the data tend to fall into two groups: one with short waiting and eruption times, and one with long waiting and eruption 
+We can see in Figure \@ref(fig:03-data-faithful-scatter) the data tend to fall into two groups: one with short waiting and eruption times, and one with long waiting and eruption 
 times. Note that in this case, there is no overplotting: the points are generally nicely visually separated, and the pattern they form is clear.
 In order to refine the visualization, we need only to add axis labels and make the font more readable:
 
@@ -318,7 +318,14 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   ylab("Mother tongue (number of Canadian residents)")
 ```
 
-Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-labs). The reason for the bunched data is because many more people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale:
+Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-labs). The data clumped is because many more people in Canada speak the the two languages represented by the points in the top right corner. We can confirm the two points in the upper right corner of the visualization are the two official languages (English and French) by filtering the data:
+
+```{r english-mother-tongue}
+can_lang %>%
+  filter(language == "English" | language == "French")
+```
+
+To answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale:
 
 ```{r mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -329,7 +336,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-From this visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these  points would fit the pattern we observe quite well, we say that it's linear.
+From the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these  points would fit the pattern we observe quite well, we say that it's linear.
 
 ```{r changing_the_units, include = FALSE}
 english_mother_tongue <- can_lang %>%
@@ -347,7 +354,7 @@ represent this as a single meaningful number in our data visualizations. We can
 do this by dividing the number of people reporting a given language as their 
 mother tongue by the number of people who live in Canada. For example, the 
 proportion of people who reported that their mother tongue was English in the 
-2016 Canadian census was 
+2016 Canadian census was `r  format(english_mother_tongue, scientific = FALSE, big.mark = ",") ` / `r  format(census_popn, scientific = FALSE, big.mark = ",")` =
 `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
 
 Below we use mutate to calculate the proportion of people reporting a given language as their mother tongue and primary language at home for all the languages in the `can_lang` data set:
@@ -368,12 +375,10 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-From the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale-props), we can now clearly see that not just a lot, but that the majority of Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
+Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
 
-### Coloring points by group
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
-scatter plot we have already created by group/category. For example,
-given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+scatter plot we have already created by group/category. For example, given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
 We will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
@@ -386,6 +391,15 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
+From the visualization in Figure \@ref(fig:scatter-colour-by-category), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages (English and French) as their mother tongue and as the language they speak most often at home. 
+
+```{r}
+can_lang <- can_lang %>% 
+  filter(language == "English" | language == "French") %>% 
+  mutate(category = language) %>% 
+  bind_rows(can_lang %>% 
+  filter(language != "English" & language != "French"))
+```
 
 What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
@@ -396,12 +410,9 @@ Does this mean that this relationship is positive for all languages in the world
 The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
 and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this course.  
 
+We have added a few more layers to make the data visualization in Figure \@ref(fig:nachos-to-cheesecake) even more effective. Specifically we used have improved the visualizations accessibility by choosing colours that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent.
 
-Below, we have added a few more layers to make the data visualization even more effective. Specifically we used have improved the visualizations accessibility by choosing 
-colours that are easier to distinguish and also mapped category to shape, we handled the problem of overlapping data points by making them slightly transparent, and we changed the background from grey to white to improve the 
-contrast.
-
-```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
+```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(
   x = most_at_home,
   y = mother_tongue,
@@ -409,7 +420,7 @@ ggplot(can_lang, aes(
   shape = category
 )) + # map categories to different shapes
   geom_point(alpha = 0.6) + # set the transparency of the points
-  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black")) + # choose point colours
+  scale_color_manual(values = c("deepskyblue2", "firebrick1", "forestgreen", "black")) + # choose point colours
   xlab("Language spoken most at home (proportion of Canadian residents)") +
   ylab("Mother tongue (proportion of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
